fix: move header buttons into block-level DIV for easier viewing on mobile

--- a/mycodo/mycodo_flask/static/css/custom.css
+++ b/mycodo/mycodo_flask/static/css/custom.css
@@ -103,18 +103,15 @@
 }
 
 .widget-settings a {
+  padding: 0;
   opacity: 0.4;
-  outline: none;
+  outline: 0;
   border: 0;
 }
 
 .widget-settings a:hover,
 .widget-settings a:active {
   opacity: 1.0;
-}
-
-.widget-settings .btn {
-  padding: 0;
 }
 
 .widget-graph-controls {
@@ -125,7 +122,14 @@
 }
 
 .widget-graph-controls a {
-  outline: 0
+  opacity: 0.4;
+  outline: 0;
+  border: 0;
+}
+
+.widget-graph-controls a:hover,
+.widget-graph-controls a:active {
+  opacity: 1.0;
 }
 
 .widget-graph-responsive-controls {
@@ -133,7 +137,7 @@
 }
 
 .widget-graph-responsive-controls.responsive {
-  display: inline-block;
-  margin-right: 0.5em;
-  text-align: right;
+  display: block;
+  padding: 0.5em 0;
+  text-align: center;
 }
